test/sema/traits/impl_block_errors_stacked.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {
  fn foo() {}
  fn bar() {}
  fn baz() {}
}

struct S {
  impl A {
    // CHECK: [[# @LINE + 1]]:15: error: failed to resolve type 'error'
    fn foo(): error {}

    // CHECK: [[# @LINE + 1]]:15: error: failed to resolve type 'error'
    fn bar(): error {}

    // CHECK: [[# @LINE + 1]]:15: error: failed to resolve type 'error'
    fn baz(): error {}
  }
}

fn main() {}
